# tree-iterators-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust_build_and_test.yml
doc_files/: ancestors_leaves.md  ancestors_vec.md  at_path.md  at_path_binary_collection_example.md  at_path_binary_example.md  at_path_tree_example.md  attach_ancestors.md  attach_context.md  leaves.md  path.md  tree_context_children.md
src/: examples.rs  lib.rs  make_peekable_iterator.rs  owned.rs  prelude.rs  readonly_ref.rs  ref_mut.rs  tree_context.rs
src/bfs_iterators/: borrow.rs  mod.rs  mut_borrow.rs  owned.rs
src/context_iterators/: map.rs  map_context.rs  mod.rs  prune.rs  prune_context.rs  prune_depth.rs
src/dfs_inorder_iterators/: borrow.rs  mod.rs  mut_borrow.rs  owned.rs
src/dfs_postorder_iterators/: borrow.rs  mod.rs  mut_borrow.rs  owned.rs
src/dfs_preorder_iterators/: borrow.rs  mod.rs  mut_borrow.rs  owned.rs
src/fallible_tree_collection_iterators/: fold.rs  map.rs  mod.rs  prune.rs  prune_depth.rs  prune_path.rs  trees.rs
src/fallible_tree_iterators/: map.rs  mod.rs  prune.rs  prune_depth.rs  prune_path.rs
src/leaves_iterators/: borrow.rs  mod.rs  mut_borrow.rs  owned.rs
src/leaves_iterators/ancestors_breadth_first/: borrow.rs  mod.rs  mut_borrow.rs  owned.rs
src/leaves_iterators/ancestors_depth_first/: borrow.rs  mod.rs  mut_borrow.rs  (+1 more)
src/tests/: ancestors_leaves.rs  bfs.rs  dfs_inorder.rs  dfs_postorder.rs  dfs_preorder.rs  fold.rs  get_at_path.rs  leaves.rs  map.rs  mod.rs
src/tree_collection_iterators/: map.rs  mod.rs  prune.rs  prune_depth.rs  prune_path.rs  trees.rs
src/tree_iterators/: map.rs  mod.rs  prune.rs  prune_depth.rs  prune_path.rs
tests/: Cargo.toml
tests/src/: ancestors_leaves.rs  bfs.rs  dfs_inorder.rs  dfs_postorder.rs  dfs_preorder.rs  fold.rs  get_at_path.rs  leaves.rs  lib.rs  map.rs  prune.rs
tree_iterators_rs/: Cargo.toml  README.md
tree_iterators_rs/doc_files/: ancestors_vec.md  at_path_tree_collection_example.md  collection_attach_context.md  collection_path.md
tree_iterators_rs/src/: collection_iterators.rs  examples.rs  lib.rs  prelude.rs  tree_context.rs
tree_iterators_rs/src/bfs_iterators/: borrow.rs  mut_borrow.rs  owned.rs
tree_iterators_rs/src/dfs_inorder_iterators/: borrow.rs  mut_borrow.rs  owned.rs
tree_iterators_rs/src/dfs_postorder_iterators/: borrow.rs  mod.rs  mut_borrow.rs  owned.rs
tree_iterators_rs/src/dfs_preorder_iterators/: borrow.rs  owned.rs
tree_iterators_rs/src/leaves_iterators/: mod.rs
tree_iterators_rs/src/leaves_iterators/ancestors_breadth_first/: borrow.rs  mod.rs  mut_borrow.rs  owned.rs
tree_iterators_rs/src/leaves_iterators/ancestors_depth_first/: mod.rs
tree_iterators_rs/src/leaves_iterators/breadth_first/: mod.rs  owned.rs
tree_iterators_rs/src/leaves_iterators/depth_first/: borrow.rs  mod.rs  owned.rs
tree_iterators_rs/src/tree_collection_iterators/: fold.rs  fold_path.rs  map.rs  map_path.rs  mod.rs  prune.rs  prune_depth.rs  prune_path.rs  trees.rs
tree_iterators_rs/src/tree_iterators/: map.rs  map_path.rs  mod.rs  prune.rs  prune_depth.rs  prune_path.rs
(+8 files in other folders)
