[package]
name = "tree_iterators_rs"
version = "1.2.0"
edition = "2021"
description = "tree-iterators-rs is a library built to provide you with the iterators to easily work with tree data structures in Rust."
license = "MIT"
repository = "https://github.com/mr-adult/tree-iterators-rs"
documentation = "https://docs.rs/tree_iterators_rs/latest/tree_iterators_rs/"
keywords = ["tree", "dfs", "bfs", "traversal", "depth first", "breadth first", "traverse", "search", "graph", "bft", "dft", "preorder", "postorder", "inorder", "pre order", "post order", "in order"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streaming-iterator = { version = "0.1.9", features = ["alloc"] }
serde = { version = "1.0.189",  optional = true }
serde_derive = { version = "1.0.189",  optional = true }

[features]
serde = ["dep:serde", "dep:serde_derive"]