[package]
name = "tree_iterators_rs"
version = "3.3.1"
edition = "2021"
description = "tree_iterators_rs is a library built to provide you with the iterators to easily work with tree data structures in Rust."
license = "MIT"
repository = "https://github.com/mr-adult/tree-iterators-rs"
documentation = "https://docs.rs/tree_iterators_rs/latest/tree_iterators_rs/"
keywords = ["tree", "traversal", "traverse", "search", "iteration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streaming-iterator = { version = "0.1.9", features = ["alloc"] }
serde = { version = "1.0",  optional = true }
serde_derive = { version = "1.0",  optional = true }

[features]
serde = ["dep:serde", "dep:serde_derive"]