[package]
name = "tree_iterators_rs"
authors = ["Adam Fortune <adamfortune96@protonmail.com>"]
version = "3.5.1"
edition = "2021"
description = "tree_iterators_rs is a library built to provide you with the iterators to easily work with tree data structures in Rust."
license = "MIT"
repository = "https://github.com/mr-adult/tree-iterators-rs"
documentation = "https://docs.rs/tree_iterators_rs/latest/tree_iterators_rs/"
categories = ["data-structures", "algorithms"]
keywords = ["tree", "traversal", "traverse", "search", "iteration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streaming-iterator = { workspace = true }
serde = { version = "1.0",  optional = true }
serde_derive = { version = "1.0",  optional = true }

[features]
serde = ["dep:serde", "dep:serde_derive"]